detect tag and cone at same time with pose estimate

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ camera_calibration/cam_calibration_data.npz
 cone_detection/*ncnn_model
 cone_detection/utils/__pycache__
 cone_detection/example_model.torchscript
+cone_detection/cam_calibration_data.npz
