--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-camera_calibration/images/image*
-camera_calibration/cam_calibration_data.npz
-/yolo_env
+# virtual env
+/mbot_vision_env
+
+# vscode cache
+*/__pycache__
+
 cone_detection/*ncnn_model
 cone_detection/utils/__pycache__
 cone_detection/example_model.torchscript
