Feature/import apriltag (#4)
* removed the legacy code

* video_streamer added and tested

* added setup.py and camera calibration

* added yolo tag detection and tested

* added apriltag detector

* added apriltag lcm publisher and subscriber

* added cone detection

* added yolo-tag-detection

* added cone lcm publisher

* removed venv use, ncnn is no longer avaibale.

* add ncnn format back, tested all good

* added tag cone publisher

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-camera_calibration/images/image*
-camera_calibration/cam_calibration_data.npz
-/yolo_env
-cone_detection/*ncnn_model
-cone_detection/utils/__pycache__
-cone_detection/example_model.torchscript
-cone_detection/cam_calibration_data.npz
+# vscode cache
+*/__pycache__
+
+# camera calibration
+images/*.jpg
+cam_calibration_data.npz
